--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -1,12 +1,28 @@
 <div *ngIf="artist">
-  <header>
+  <header class="artist-header">
     <div *ngIf="artist.images.length > 0">
-      <img class="artist-thumb img-circle" 
-        src={{artist.images[0].url}}>
-    </div> 
+      <img class="artist-thumb img-circle" src={{artist.images[0].url}}>
+    </div>
     <h1>{{artist.name}}</h1>
     <div *ngIf="artist.genres.length > 0">
       Genres: <span *ngFor="let genre of artist.genres">{{genre}}</span>
     </div>
   </header>
-</div> 
+  <div class="artist-albums">
+    <div class="row">
+      <div *ngFor="let album of albums">
+        <div class="col-md-3">
+
+          <div class="album well">
+            <img class="albums-thumb img-thumbnail" src="{{album.images[0].url}}">
+
+
+            <h4>{{album.name}}</h4>
+
+            <a class="btn btn-default btn-block" routerLink="album/{{album.id}}">Album Details</a>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
