AlbumComponent now functioning.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,9 @@
-ABOUT
+<div class="row">
+    <div class="col-md-12">
+        <p>
+            <em>ngSpotify</em> is a tool built to quickly query the ngSpotify
+            API. Each keystroke searchs to find the most releavent artists. 
+            Explore artists, albums, and preview tracks!
+        </p>
+    </div>
+</div>
