--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -19,7 +19,7 @@
 
             <h4>{{album.name}}</h4>
 
-            <a class="btn btn-default btn-block" routerLink="album/{{album.id}}">Album Details</a>
+            <a class="btn btn-default btn-block" routerLink="/album/{{album.id}}">Album Details</a>
 
           </div>
         </div>
