Added navigatin to portfolio and blog

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,6 +13,8 @@
       <ul class="nav navbar-nav">
         <li><a routerLink="/">Home</a></li>
         <li><a routerLink="/about">About</a></li>
+        <li><a href="http://www.mileshill.us">Portfolio</a></li>
+        <li><a href="http://www.discovermileshill.com">Blog</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
